new listener-based junit5 agent added disabled tests reporting, fixed repetitions count, added possibility to modify test item name, description, tags

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty 'reportDisabledTests', reportDisabledTests
 
-    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
 }
 
 task wrapper(type: Wrapper) {
