fix if property is absent

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    systemProperty 'reportDisabledTests', reportDisabledTests
-
+    if (project.hasProperty('reportDisabledTests')) {
+        systemProperty('reportDisabledTests', reportDisabledTests)
+    }
 }
 
 task wrapper(type: Wrapper) {
