--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,11 @@
-/*
- * Copyright 2019 EPAM Systems
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 plugins {
     id 'net.researchgate.release' version '2.8.0'
     id "com.jfrog.bintray" version "1.8.4"
 }
 apply plugin: 'java'
 apply from: 'https://raw.githubusercontent.com/reportportal/gradle-scripts/master/release-commons.gradle'
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-project.ext {
-    releaseMode = project.hasProperty('releaseMode')
-}
-ext {
-    junitJupiterVersion = '5.5.0'
-}
 
 description = 'JUnit5 Agent'
 
@@ -41,14 +17,14 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+ext {
+    junitJupiterVersion = '5.5.0'
+    junitPlatformVersion = '1.5.0'
+}
+
 dependencies {
-    if (releaseMode) {
-        compile 'com.epam.reportportal:client-java:5.0.0-BETA-4'
-        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-11'
-    } else {
-        compile 'com.github.reportportal:client-java:9ede451'
-        compile 'com.github.reportportal:commons-model:2d10629'
-    }
+    compile 'com.epam.reportportal:client-java:4.0.8'
+    compile 'com.epam.reportportal:commons-model:4.2.0'
 
     compileOnly("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
     compile("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
@@ -61,8 +37,4 @@ test {
     if (project.hasProperty('reportDisabledTests')) {
         systemProperty('reportDisabledTests', reportDisabledTests)
     }
-}
-
-wrapper {
-    gradleVersion = '5.4.1'
 }
